Add help and ping commands with latency checks and event handling

--- a/biome.json
+++ b/biome.json
@@ -54,6 +54,9 @@
         "noReExportAll": "off",
         "noBarrelFile": "off"
       },
+      "suspicious": {
+        "noExplicitAny": "off"
+      },
       "style": {
         "useAsConstAssertion": "error",
         "noUnusedTemplateLiteral": "error",
