--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@dotenvx/dotenvx": "^1.48.4",
     "@prisma/client": "^6.13.0",
     "discord.js": "^14.21.0",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "zod": "^4.0.14"
   },
