--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 # Logs
 logs
 *.log
@@ -37,9 +39,11 @@ bower_components
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
-# Dependency directories
+# Dependencies
 node_modules/
 jspm_packages/
+.pnp
+.pnp.js
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
@@ -68,6 +72,10 @@ web_modules/
 # dotenv environment variable files
 .env
 .env.*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 !.env.example
 
 # parcel-bundler cache (https://parceljs.org/)
@@ -76,11 +84,16 @@ web_modules/
 
 # Next.js build output
 .next
+.next/
 out
+out/
 
 # Nuxt.js build / generate output
 .nuxt
 dist
+
+# Build Outputs
+build
 
 # Gatsby files
 .cache/
@@ -93,7 +106,6 @@ dist
 
 # vuepress v2.x temp and cache directory
 .temp
-.cache
 
 # Sveltekit cache directory
 .svelte-kit/
@@ -140,3 +152,13 @@ vite.config.ts.timestamp-*
 
 # Temporary files created by the Prisma CLI
 /src/generated/prisma
+
+# Turbo
+.turbo
+
+# Vercel
+.vercel
+
+# Misc
+.DS_Store
+*.pem
