--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,17 +28,14 @@
   "dependencies": {
     "@pure/database": "workspace:^",
     "@t3-oss/env-nextjs": "^0.13.8",
-    "@tanstack/react-query": "^5.84.1",
-    "@trpc/client": "^11.4.3",
-    "@trpc/react-query": "^11.4.3",
-    "@trpc/server": "^11.4.3",
+    "@types/jsonwebtoken": "^9.0.10",
+    "discord-api-types": "^0.38.18",
     "framer-motion": "^12.23.12",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "server-only": "^0.0.1",
-    "superjson": "^2.2.2",
     "zod": "^4.0.14"
   },
   "devDependencies": {
