--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/AtsuLeVrai/pure#readme",
   "scripts": {
     "db:generate": "prisma generate",
+    "db:format": "prisma format",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
