Add authentication and guild management features; implement secure session handling, Discord token retrieval, and guild configuration updates

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -4,10 +4,18 @@ DATABASE_URL="postgresql://user:password@localhost:5432/pure"
 # Discord OAuth2
 DISCORD_CLIENT_ID="your_discord_bot_client_id"
 DISCORD_CLIENT_SECRET="your_discord_bot_client_secret"
+DISCORD_BOT_TOKEN="your_discord_bot_token"
 DISCORD_REDIRECT_URI="http://localhost:3000/api/auth/callback"
 
+# For frontend bot invite links
+NEXT_PUBLIC_DISCORD_CLIENT_ID="your_discord_bot_client_id"
+
 # JWT Secret (generate a random string)
-JWT_SECRET="your_jwt_secret_key_here"
+JWT_SECRET="your_jwt_secret_key_here_32_chars_minimum"
+
+# Encryption keys for Discord tokens (generate random strings)
+ENCRYPTION_KEY="your_encryption_key_32_chars_minimum"
+ENCRYPTION_SALT="your_encryption_salt_16_chars_minimum"
 
 # Next.js
 NODE_ENV="development"
