--- a/apps/bot/package.json
+++ b/apps/bot/package.json
@@ -28,12 +28,15 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "@discordjs/voice": "^0.18.0",
     "@pure/database": "workspace:^",
+    "bufferutil": "^4.0.9",
     "discord.js": "^14.21.0",
     "dotenv": "^17.2.1",
     "i18next": "^25.3.4",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
+    "zlib-sync": "^0.1.10",
     "zod": "^4.0.17"
   },
   "devDependencies": {
