--- a/apps/bot/package.json
+++ b/apps/bot/package.json
@@ -28,18 +28,22 @@
   },
   "dependencies": {
     "@discordjs/voice": "^0.18.0",
+    "@neondatabase/serverless": "^1.0.1",
     "@pure/database": "workspace:^",
     "bufferutil": "^4.0.9",
     "discord.js": "^14.21.0",
     "dotenv": "^17.2.1",
+    "drizzle-orm": "^0.44.4",
     "i18next": "^25.3.6",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
+    "ws": "^8.18.3",
     "zlib-sync": "^0.1.10",
     "zod": "^4.0.17"
   },
   "devDependencies": {
-    "@types/node": "^24.2.1",
+    "@types/node": "^24.3.0",
+    "@types/ws": "^8.18.1",
     "cross-env": "^10.0.0",
     "discord-api-types": "^0.38.20",
     "tsdown": "^0.13.5",
