--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -21,7 +21,7 @@
     "dev": "next dev --turbopack --port=3001",
     "build": "next build",
     "start": "next start",
-    "check-types": "tsc -b"
+    "check-types": "tsc --noEmit"
   },
   "dependencies": {
     "@orpc/client": "^1.8.1",
@@ -43,7 +43,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.12",
     "@tanstack/react-query-devtools": "^5.85.3",
-    "@types/node": "^24.2.1",
+    "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "tailwindcss": "^4.1.12",
