--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -22,7 +22,7 @@
     "build": "tsdown",
     "start": "node dist/index.js",
     "dev": "tsx watch src/index.ts",
-    "check-types": "tsc -b",
+    "check-types": "tsc --noEmit",
     "test": "vitest"
   },
   "dependencies": {
@@ -31,11 +31,11 @@
     "@orpc/server": "^1.8.1",
     "@pure/database": "workspace:^",
     "dotenv": "^17.2.1",
-    "hono": "^4.9.1",
+    "hono": "^4.9.2",
     "zod": "^4.0.17"
   },
   "devDependencies": {
-    "@types/node": "^24.2.1",
+    "@types/node": "^24.3.0",
     "discord-api-types": "^0.38.20",
     "tsdown": "^0.14.1",
     "tsx": "^4.20.4",
