--- a/apps/bot/package.json
+++ b/apps/bot/package.json
@@ -27,13 +27,16 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@discord-player/extractor": "^7.1.0",
     "@discordjs/voice": "^0.18.0",
     "@neondatabase/serverless": "^1.0.1",
     "@pure/database": "workspace:^",
     "bufferutil": "^4.0.9",
+    "discord-player": "^7.1.0",
     "discord.js": "^14.21.0",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
+    "ffmpeg-static": "^5.2.0",
     "i18next": "^25.3.6",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
