--- a/apps/bot/package.json
+++ b/apps/bot/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@discord-player/extractor": "^7.1.0",
+    "@discordjs/opus": "^0.10.0",
     "@discordjs/voice": "^0.18.0",
     "@neondatabase/serverless": "^1.0.1",
     "@pure/database": "workspace:^",
