--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "biome:check": "biome check --write --unsafe",
-    "check-types": "bun tsc --noEmit",
+    "check-types": "tsc --noEmit",
     "prepare": "husky"
   },
   "dependencies": {
     "@discord-player/extractor": "^7.1.0",
     "@discordjs/opus": "^0.10.0",
-    "@discordjs/voice": "^0.18.0",
+    "@discordjs/voice": "^0.19.0",
     "@neondatabase/serverless": "^1.0.1",
     "bufferutil": "^4.0.9",
     "discord-player": "^7.1.0",
@@ -43,6 +43,7 @@
     "drizzle-orm": "^0.44.4",
     "ffmpeg-static": "^5.2.0",
     "i18next": "^25.3.6",
+    "node-emoji": "^2.2.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "ws": "^8.18.3",
