--- a/package.json
+++ b/package.json
@@ -34,18 +34,18 @@
   },
   "dependencies": {
     "@discord-player/extractor": "^7.1.0",
-    "@discordjs/opus": "^0.10.0",
     "@discordjs/voice": "^0.19.0",
     "@neondatabase/serverless": "^1.0.1",
     "bufferutil": "^4.0.9",
     "discord-player": "^7.1.0",
+    "discord-player-youtubei": "^1.5.0",
     "discord.js": "^14.21.0",
     "drizzle-orm": "^0.44.4",
     "ffmpeg-static": "^5.2.0",
     "i18next": "^25.3.6",
+    "mediaplex": "^1.0.0",
     "node-emoji": "^2.2.0",
     "uuid": "^11.1.0",
-    "winston": "^3.17.0",
     "ws": "^8.18.3",
     "zod": "^4.0.17"
   },
@@ -59,6 +59,9 @@
     "lint-staged": "^16.1.5",
     "typescript": "^5.9.2"
   },
+  "trustedDependencies": [
+    "bufferutil"
+  ],
   "lint-staged": {
     "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}": [
       "biome check --write --unsafe"
