--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "private": true,
   "author": "AtsuLeVrai",
   "license": "Apache-2.0",
-  "packageManager": "bun@1.2.20",
+  "packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b",
   "homepage": "https://github.com/AtsuLeVrai/pure#readme",
   "engines": {
     "node": ">=22.0.0",
-    "bun": ">=1.2.0"
+    "pnpm": ">=10.15.0"
   },
   "repository": {
     "type": "git",
@@ -21,9 +21,9 @@
     "url": "https://github.com/AtsuLeVrai/pure/issues"
   },
   "scripts": {
-    "bot:start": "bun run dist/index.js",
-    "bot:dev": "bun --watch src/index.ts",
-    "bot:build": "bun build src/index.ts --outdir dist --target node --external unfetch",
+    "bot:start": "node dist/index.js",
+    "bot:dev": "tsx watch src/index.ts",
+    "bot:build": "tsdown",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:generate": "drizzle-kit generate",
@@ -35,33 +35,32 @@
   "dependencies": {
     "@discord-player/extractor": "^7.1.0",
     "@discordjs/voice": "^0.19.0",
-    "@neondatabase/serverless": "^1.0.1",
+    "better-sqlite3": "^12.2.0",
     "bufferutil": "^4.0.9",
     "discord-player": "^7.1.0",
-    "discord-player-youtubei": "^1.5.0",
     "discord.js": "^14.21.0",
+    "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
     "ffmpeg-static": "^5.2.0",
-    "i18next": "^25.3.6",
+    "i18next": "^25.4.0",
     "mediaplex": "^1.0.0",
     "node-emoji": "^2.2.0",
     "uuid": "^11.1.0",
-    "ws": "^8.18.3",
+    "zlib-sync": "^0.1.10",
     "zod": "^4.0.17"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.0",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^24.3.0",
-    "@types/ws": "^8.18.1",
     "discord-api-types": "^0.38.20",
     "drizzle-kit": "^0.31.4",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.5",
+    "tsdown": "^0.14.1",
+    "tsx": "^4.20.4",
     "typescript": "^5.9.2"
   },
-  "trustedDependencies": [
-    "bufferutil"
-  ],
   "lint-staged": {
     "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}": [
       "biome check --write --unsafe"
